[gd_scene load_steps=6 format=3 uid="uid://ctovp00ynpoo8"]

[ext_resource type="Script" path="res://skull_2.gd" id="1_1h8l3"]
[ext_resource type="Texture2D" uid="uid://dohwwc06rf2oh" path="res://New Piskel (8).png" id="1_ykypj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_reqmj"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_leq0k"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnd3t"]
size = Vector2(2, 8)

[node name="skull2" type="RigidBody2D"]
script = ExtResource("1_1h8l3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_reqmj")

[node name="NewPiskel(8)" type="Sprite2D" parent="."]
texture = ExtResource("1_ykypj")
hframes = 8
vframes = 8
frame = 41

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_leq0k")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(8, 2)
shape = SubResource("RectangleShape2D_dnd3t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-8, 2)
shape = SubResource("RectangleShape2D_dnd3t")

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
